--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,9 @@ spring:
     url: jdbc:mysql://192.168.1.151:3306/eshop?useSSL=false
     username: root
     password: 123456
+  thymeleaf:
+    mode: LEGACYHTML5
+    cache: false
 mybatis:
   mapper-locations: classpath:/mapper/*.xml
 server:
