--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://192.168.1.151:3306/eshop?useSSL=false
+    url: jdbc:mysql://192.168.1.151:3306/eshop?characterEncoding=utf-8&useSSL=false
     username: root
     password: 123456
   thymeleaf:
