--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://192.168.1.151:3306/eshop?useSSL=false
+    url: jdbc:mysql://192.168.1.151:3306/eshop?useSSL=false&characterEncoding=UTF-8
     username: root
     password: 123456
   thymeleaf:
@@ -10,3 +10,5 @@ mybatis:
   mapper-locations: classpath:/mapper/*.xml
 server:
   port: 80
+  tomcat:
+    uri-encoding: UTF-8
